answered question 2 section a

--- a/section a.ipynb
+++ b/section a.ipynb
@@ -31,6 +31,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<p>Bandwidth refers to the maximum amount of data that can be transmitted over a network at a specific time measured in bits per second</p>\n",
+    "\n",
+    "<ul>\n",
+    "<li>Speed of Data Transfer, higher bandwidth means more data can be sent and received in less time, leading to faster data transmission rates.</li>\n",
+    "<li>Quality of Service, insufficient bandwidth can cause buffering, lag, or delays in applications like video calls, online gaming, or streaming services. High-bandwidth connections provide smoother experiences with minimal interruptions.\n",
+    "</ul>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Compare and Contrast IPV4 and IPV6 addressing schemes. Highlight the reasons for transitioning to IPV6</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
