answered question 6 section a

--- a/section a.ipynb
+++ b/section a.ipynb
@@ -171,6 +171,60 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Demerits of Wireless Networks\n",
+    "While wireless networks offer many advantages, they also come with certain drawbacks when compared to wired networks. Here are some key demerits:\n",
+    "\n",
+    "1. Limited Speed and Bandwidth\n",
+    "Wireless networks often have lower data transfer speeds and bandwidth compared to wired networks, particularly in high-traffic environments.\n",
+    "Performance can degrade when multiple devices connect simultaneously.\n",
+    "2. Signal Interference\n",
+    "Wireless signals are susceptible to interference from physical obstacles (walls, buildings) and electronic devices (microwaves, cordless phones).\n",
+    "Environmental factors, like weather conditions, can also affect signal quality.\n",
+    "3. Security Vulnerabilities\n",
+    "Wireless networks are more vulnerable to hacking and unauthorized access because signals are broadcast over the air.\n",
+    "Threats like eavesdropping, rogue access points, and signal jamming are more common.\n",
+    "Requires robust encryption protocols (e.g., WPA3) to secure the network, which may increase complexity.\n",
+    "4. Limited Range\n",
+    "Wireless networks have a restricted range, typically a few hundred feet for Wi-Fi, depending on the router and environmental conditions.\n",
+    "Extending range requires additional equipment, such as repeaters or mesh networks, which adds to the cost.\n",
+    "5. Unstable Connections\n",
+    "Wireless connections can be less reliable than wired ones, with occasional drops or fluctuations in signal strength.\n",
+    "Factors like device distance from the router and interference contribute to instability.\n",
+    "6. Power Dependency\n",
+    "Wireless devices, such as routers and access points, require continuous power to function.\n",
+    "Devices relying on battery power (e.g., laptops, smartphones) may experience reduced connectivity as their battery life diminishes.\n",
+    "7. Higher Latency\n",
+    "Wireless networks often have higher latency compared to wired networks, which can impact real-time applications like online gaming, video conferencing, and VoIP.\n",
+    "8. Cost of Equipment\n",
+    "While initial setup may be cheaper due to the lack of cables, high-quality routers, access points, and signal boosters can be expensive.\n",
+    "Maintenance costs can rise if specialized equipment is needed to improve coverage or performance.\n",
+    "9. Scalability Challenges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparison with Wired Networks\n",
+    "Aspect\tWireless Networks\tWired Networks\n",
+    "Speed\tGenerally slower, prone to interference\tFaster and more consistent\n",
+    "Reliability\tLess stable, subject to drops\tHighly stable and reliable\n",
+    "Security\tMore vulnerable, requires strong encryption\tMore secure, physical access required\n",
+    "Setup\tEasier and faster\tComplex due to cabling\n",
+    "Cost\tLower upfront cost, higher maintenance costs\tHigher initial cost but less maintenance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>What is the difference between half duplex and full duplex with examples of where each might be used</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
